--- a/public/css/style.css
+++ b/public/css/style.css
@@ -2,3 +2,6 @@ body {
   background-color: bisque;
   color: cornflowerblue;
 }
+body h1, body h2, body h3, body h4, body h5, body h6, body p {
+  text-align: center;
+}
