--- a/src/style.scss
+++ b/src/style.scss
@@ -1,3 +1,7 @@
 body {
     background-color: bisque;
+    color: cornflowerblue;
+    h1, h2, h3, h4, h5, h6, p {
+        text-align: center;
+    }
 }
